k8s/istio/virtual-services.yaml
# Gateway'den gelen trafiği servislere yönlendirir.
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service
  namespace: devops-arena
spec:
  hosts:
    - "*"
  gateways:
    - devops-arena-gateway
  http:
    - match:
        - uri:
            prefix: /products
        - uri:
            prefix: /health
      route:
        - destination:
            host: product-service
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-service
  namespace: devops-arena
spec:
  hosts:
    - "*"
  gateways:
    - devops-arena-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: order-service
            port:
              number: 80
